--- a/app/src/main/res/layout/fragment_crime_deatail.xml
+++ b/app/src/main/res/layout/fragment_crime_deatail.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".CrimeDeatailFragment">
+    android:orientation="vertical">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/crime_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="This is Crime Deatal Fragment"
-        android:textSize="50dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_margin="10dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        android:scrollbars="vertical" />
 
-</LinearLayout>
+
+</RelativeLayout>
